--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,10 +1,13 @@
 section.intro {
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    margin: 0 auto;
+    padding: var(--header-height) 0 0 0;
     display: grid;
     justify-items: center;
-    height: 100vh;
-    padding-top: var(--header-height);
     background: transparent;
     box-shadow: none;
     color: #000;
@@ -15,11 +18,11 @@ section.intro {
 .logo-container {
     margin-top: 8rem;
     margin-left: 2rem;
+    justify-self: start;
 }
 
 a.center-bottom {
     align-self: end;
-    margin-bottom: 6rem;
     padding: 2rem;
 }
 
